fixed attribution bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,9 +148,7 @@ p {
     color: var(--cyan);
 }
 .attribution {
-    position: fixed;
-    left: 50%;
-    bottom: 20px;
-    transform: translate(-50%, -50%);
-    margin: 0 auto;
+    position: absolute;
+    left: 42%;
+    bottom: 10px
 }
